  * bug fix: FORMATTER can successfully compile pretty-printer format
    strings which use variants of the ~* directive inside.
  * bug fix: SEARCH now applies its TEST predicate to the elements of
    the arguments in the correct order.  (thanks to Wolfhard Buss)
  * fixed bug 235b: compiler uses return types of MAPCAR and friends
    in type inference.  (thanks to Robert E. Brown)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** NIL is now allowed as a structure slot name.
    ** arbitrary numbers, not just reals, are allowed in certain
       circumstances in LOOP for-as-arithmetic clauses.
    ** multiple class redefinitions before slot access no longer
       causes a type error.
    ** (SETF FIND-CLASS) now accepts NIL as an argument to remove the
       association between the name and a class.
    ** generic functions with non-standard method-combination and over
       five methods all of which return constants no longer return NIL
       after the first few invocations.  (thanks to Gerd Moellmann)
    ** CALL-NEXT-METHOD with no arguments now passes the original
       values of the arguments, even in the presence of assignment.
    ** functions [N]SUBST*, LAST, NRECONC, [N]SUBLIS may return any
       object.
    ** DISASSEMBLE works with closures and funcallable instances.
    ** ADD-METHOD now returns the generic function, not the new
       method.
    ** FIND-METHOD signals an error if the lengths of the specializers
       is incompatible with the generic function, even if the ERRORP
       argument is true.
    ** TYPE-OF returns recognizeable subtypes of all built-in-types of
       which its argument is a member.
    ** DEFCLASS only redefines the class named by its class-name
       argument if that name is the proper name of the class;
       otherwise, it creates a new class.
    ** SLOT-UNBOUND now correctly initalizes the CELL-ERROR-NAME slot
       of the UNBOUND-SLOT condition to the name of the slot.
